Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22494

Galera assertion lock_sys.mutex.is_owned() at lock_trx_handle_wait_low

    XMLWordPrintable

Details

    Description

      Tests: galera.galera_bf_abort_shutdown galera_sr.galera_sr_kill_connection

      Thread 1 (Thread 0x7f0a058aa700 (LWP 290963)):
      #0  __pthread_kill (threadid=<optimized out>, signo=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x00005610f3f597cd in my_write_core (sig=6) at /home/jan/mysql/10.4/mysys/stacktrace.c:481
      #2  0x00005610f36aaa47 in handle_fatal_signal (sig=6) at /home/jan/mysql/10.4/sql/signal_handler.cc:343
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x00007f0a1475a859 in __GI_abort () at abort.c:79
      #6  0x00007f0a1475a729 in __assert_fail_base (fmt=0x7f0a148f0588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x5610f425fcb3 "(lock_sys.mutex.is_owned())", file=0x5610f4260648 "/home/jan/mysql/10.4/storage/innobase/lock/lock0lock.cc", line=6233, function=<optimized out>) at assert.c:92
      #7  0x00007f0a1476bf36 in __GI___assert_fail (assertion=0x5610f425fcb3 "(lock_sys.mutex.is_owned())", file=0x5610f4260648 "/home/jan/mysql/10.4/storage/innobase/lock/lock0lock.cc", line=6233, function=0x5610f4264998 "dberr_t lock_trx_handle_wait_low(trx_t*)") at assert.c:101
      #8  0x00005610f39c37f9 in lock_trx_handle_wait_low (trx=0x7f0a063d9268) at /home/jan/mysql/10.4/storage/innobase/lock/lock0lock.cc:6233
      #9  0x00005610f39c38ed in lock_trx_handle_wait (trx=0x7f0a063d9268) at /home/jan/mysql/10.4/storage/innobase/lock/lock0lock.cc:6261
      #10 0x00005610f3903459 in innobase_kill_query (thd=0x7f0994000d90) at /home/jan/mysql/10.4/storage/innobase/handler/ha_innodb.cc:5134
      #11 0x00005610f36aeed7 in kill_handlerton (thd=0x7f0994000d90, plugin=0x7f0990012df0, level=0x7f0a058a88f4) at /home/jan/mysql/10.4/sql/handler.cc:847
      #12 0x00005610f336a090 in plugin_foreach_with_mask (thd=0x7f0994000d90, func=0x5610f36aee51 <kill_handlerton(THD*, plugin_ref, void*)>, type=1, state_mask=8, arg=0x7f0a058a88f4) at /home/jan/mysql/10.4/sql/sql_plugin.cc:2438
      #13 0x00005610f36aef35 in ha_kill_query (thd=0x7f0994000d90, level=THD_ABORT_ASAP) at /home/jan/mysql/10.4/sql/handler.cc:854
      #14 0x00005610f32d4eae in THD::awake_no_mutex (this=0x7f0994000d90, state_to_set=KILL_CONNECTION_HARD) at /home/jan/mysql/10.4/sql/sql_class.cc:1902
      #15 0x00005610f335d78e in kill_one_thread (thd=0x7f0990001fe0, id=65, kill_signal=KILL_CONNECTION_HARD, type=KILL_TYPE_ID) at /home/jan/mysql/10.4/sql/sql_parse.cc:9083
      #16 0x00005610f335dcd3 in sql_kill (thd=0x7f0990001fe0, id=65, state=KILL_CONNECTION_HARD, type=KILL_TYPE_ID) at /home/jan/mysql/10.4/sql/sql_parse.cc:9202
      #17 0x00005610f335335a in mysql_execute_command (thd=0x7f0990001fe0) at /home/jan/mysql/10.4/sql/sql_parse.cc:5531
      #18 0x00005610f335acb1 in mysql_parse (thd=0x7f0990001fe0, rawbuf=0x7f09900134b0 "KILL CONNECTION 65", length=18, parser_state=0x7f0a058a94d0, is_com_multi=false, is_next_command=false) at /home/jan/mysql/10.4/sql/sql_parse.cc:7900
      #19 0x00005610f335a3a3 in wsrep_mysql_parse (thd=0x7f0990001fe0, rawbuf=0x7f09900134b0 "KILL CONNECTION 65", length=18, parser_state=0x7f0a058a94d0, is_com_multi=false, is_next_command=false) at /home/jan/mysql/10.4/sql/sql_parse.cc:7704
      #20 0x00005610f3347137 in dispatch_command (command=COM_QUERY, thd=0x7f0990001fe0, packet=0x7f09900099e1 "KILL CONNECTION 65", packet_length=18, is_com_multi=false, is_next_command=false) at /home/jan/mysql/10.4/sql/sql_parse.cc:1827
      #21 0x00005610f3345aa4 in do_command (thd=0x7f0990001fe0) at /home/jan/mysql/10.4/sql/sql_parse.cc:1359
      #22 0x00005610f34d0ed3 in do_handle_one_connection (connect=0x5610f66d3300) at /home/jan/mysql/10.4/sql/sql_connect.cc:1412
      #23 0x00005610f34d0c1c in handle_one_connection (arg=0x5610f66d3300) at /home/jan/mysql/10.4/sql/sql_connect.cc:1316
      #24 0x00005610f3ee5812 in pfs_spawn_thread (arg=0x5610f66e9cb0) at /home/jan/mysql/10.4/storage/perfschema/pfs.cc:1869
      #25 0x00007f0a15099609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #26 0x00007f0a14857103 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d 5.25h
                1d 5.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.